--- a/HTML5/Services.html
+++ b/HTML5/Services.html
@@ -15,10 +15,28 @@
            <li><a href="./Login.html">Login</a> </li> 
         </ul>
     </nav>
-
     </header>
-       <span>Loading Page</span>
-       <progress value="75" max="100"></progress>
-      </body>
+       <h3>Serivces</h3>
+      <ul>
+       <li>HTML Class</li>
+       <li>CSS Class</li>
+       <li>Javascript Class</li>
+      </ul><br><hr>
+      <ol>
+        <li>HTML Class</li>
+        <li>CSS Class</li>
+        <li>Javascript Class</li>
+      </ol><br><hr>
+       <ol type="a">
+         <li>HTML Class</li>
+         <li>CSS Class</li>
+         <li>Javascript Class</li>
+        </ol><br><hr>
+        <ol type="i">
+          <li>HTML Class</li>
+          <li>CSS Class</li>
+          <li>Javascript Class</li>
+        </ol>
+    </body>
 
   </HTML>
